# stego_codespace

./: .gitignore  AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  LICENSE  Makefile  README.md  README.rst  pyproject.toml  setup.py  tox.ini
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
notebooks/: stego1.ipynb  stego2.ipynb  stego_encoding.ipynb
src/textstego/: cli.py  textstego.py
src/textstego.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: __init__.py  test_textstego.py
