[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "textstego"
version = "0.1.0"
description = "Text steganography"
readme = "README.rst"
authors = [
  {name = "Oscar I. Hernandez", email = "oscar@sci-mi.org"}
]
maintainers = [
  {name = "Oscar I. Hernandez", email = "oscar@sci-mi.org"}
]
classifiers = [

]
license = {text = "BSD license"}
dependencies = [
  
]

[project.optional-dependencies]
dev = [
    "coverage",  # testing
    "mypy",  # linting
    "pytest",  # testing
    "ruff"  # linting
]

[project.urls]

bugs = "https://github.com/mathemonads/textstego/issues"
changelog = "https://github.com/mathemonads/textstego/blob/master/changelog.md"
homepage = "https://github.com/mathemonads/textstego"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"*" = ["*.*"]




# Mypy
# ----

[tool.mypy]
files = "."

# Use strict defaults
strict = true
warn_unreachable = true
warn_no_return = true

[[tool.mypy.overrides]]
# Don't require test functions to include types
module = "tests.*"
allow_untyped_defs = true
disable_error_code = "attr-defined"

